Fix spacing issues

--- a/src/components/back-to-top/_back-to-top.scss
+++ b/src/components/back-to-top/_back-to-top.scss
@@ -1,4 +1,8 @@
 .ons-back-to-top {
+  > a > span {
+    margin-left: 0.2rem;
+  }
+
   &__enabled {
     background: none;
     width: fit-content;
